--- a/Interface/loading-screen/main.css
+++ b/Interface/loading-screen/main.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: gravity;
-	src: url(../fonts/gravity.woff2);
+	src: url('../dist/fonts/gravity.woff2');
 }
 
 html {
@@ -12,7 +12,7 @@ body {
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
-	font-family: gravity;
+	font-family: gravity, sans-serif;
 	color: #DDD;
 	box-shadow: 0 0 25em black inset;
 	background-color: #222;
@@ -53,7 +53,6 @@ progress[value] {
 	width: 100%;
 	height: 30px;
 	-webkit-appearance: none;
-	appearance: none;
 }
 progress[value]::-webkit-progress-bar {
 	background-color: #333;
